// Generated by j5build v0.0.0-20250514220842-c918124a4d17. DO NOT EDIT

syntax = "proto3";

package o5.trigger.v1.service;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/page.proto";
import "j5/list/v1/query.proto";
import "o5/trigger/v1/trigger.j5s.proto";

service TriggerQueryService {
  option (j5.ext.v1.service).state_query.entity = "trigger";

  rpc TriggerGet(TriggerGetRequest) returns (TriggerGetResponse) {
    option (google.api.http) = {get: "/trigger/v1/trigger/q/{trigger_id}"};
    option (j5.ext.v1.method).state_query.get = true;
  }

  rpc TriggerList(TriggerListRequest) returns (TriggerListResponse) {
    option (google.api.http) = {get: "/trigger/v1/trigger/q"};
    option (j5.ext.v1.method).state_query.list = true;
  }

  rpc TriggerEvents(TriggerEventsRequest) returns (TriggerEventsResponse) {
    option (google.api.http) = {get: "/trigger/v1/trigger/q/{trigger_id}/events"};
    option (j5.ext.v1.method).state_query.list_events = true;
  }
}

service TriggerCommandService {
  option (j5.ext.v1.service).state_command.entity = "trigger";

  rpc PauseTrigger(PauseTriggerRequest) returns (PauseTriggerResponse) {
    option (google.api.http) = {
      post: "/trigger/v1/trigger/c/{trigger_id}/pause"
      body: "*"
    };
  }

  rpc ResumeTrigger(ResumeTriggerRequest) returns (ResumeTriggerResponse) {
    option (google.api.http) = {
      post: "/trigger/v1/trigger/c/{trigger_id}/resume"
      body: "*"
    };
  }

  rpc ManuallyTrigger(ManuallyTriggerRequest) returns (ManuallyTriggerResponse) {
    option (google.api.http) = {
      post: "/trigger/v1/trigger/c/{trigger_id}/manual"
      body: "*"
    };
  }
}

message TriggerGetRequest {
  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message TriggerGetResponse {
  option (j5.ext.v1.message).object = {};

  o5.trigger.v1.TriggerState trigger = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message TriggerListRequest {
  option (j5.ext.v1.message).object = {};

  j5.list.v1.PageRequest page = 1 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 2 [(j5.ext.v1.field).object = {}];
}

message TriggerListResponse {
  option (j5.ext.v1.message).object = {};

  repeated o5.trigger.v1.TriggerState trigger = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).array = {}
  ];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message TriggerEventsRequest {
  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  j5.list.v1.PageRequest page = 2 [(j5.ext.v1.field).object = {}];

  j5.list.v1.QueryRequest query = 3 [(j5.ext.v1.field).object = {}];
}

message TriggerEventsResponse {
  option (j5.ext.v1.message).object = {};

  repeated o5.trigger.v1.TriggerEvent events = 1 [(j5.ext.v1.field).array = {}];

  j5.list.v1.PageResponse page = 2 [(j5.ext.v1.field).object = {}];
}

message PauseTriggerRequest {
  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {}
  ];
}

message PauseTriggerResponse {
  option (j5.ext.v1.message).object = {};

  o5.trigger.v1.TriggerState trigger = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message ResumeTriggerRequest {
  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {}
  ];
}

message ResumeTriggerResponse {
  option (j5.ext.v1.message).object = {};

  o5.trigger.v1.TriggerState trigger = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}

message ManuallyTriggerRequest {
  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {}
  ];

  // The time the trigger is for
  google.protobuf.Timestamp trigger_time = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).timestamp = {}
  ];
}

message ManuallyTriggerResponse {
  option (j5.ext.v1.message).object = {};

  o5.trigger.v1.TriggerState trigger = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];
}
