// Generated by j5build v0.0.0-20250514220842-c918124a4d17. DO NOT EDIT

syntax = "proto3";

package o5.trigger.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/messaging/v1/reqres.proto";
import "j5/state/v1/metadata.proto";

message TriggerKeys {
  option (j5.ext.v1.psm) = {
    entity_name: "trigger"
    entity_part: ENTITY_PART_KEYS
  };

  option (j5.ext.v1.message).object = {};

  string trigger_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        pattern: "^[0-9A-Za-z]{22}$"
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message TriggerData {
  option (j5.ext.v1.psm) = {
    entity_name: "trigger"
    entity_part: ENTITY_PART_DATA
  };

  option (j5.ext.v1.message).object = {};

  string trigger_name = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string app_name = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).string = {}
  ];

  string cron = 3 [(j5.ext.v1.field).string = {}];

  j5.messaging.v1.RequestMetadata request_metadata = 4 [(j5.ext.v1.field).object = {}];
}

message TriggerState {
  option (j5.ext.v1.psm) = {
    entity_name: "trigger"
    entity_part: ENTITY_PART_STATE
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.StateMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  TriggerKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  TriggerData data = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  TriggerStatus status = 4 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {},
    (j5.list.v1.field).enum.filtering.filterable = true
  ];
}

message TriggerEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Created created = 1 [(j5.ext.v1.field).object = {}];

    Updated updated = 2 [(j5.ext.v1.field).object = {}];

    Paused paused = 3 [(j5.ext.v1.field).object = {}];

    Activated activated = 4 [(j5.ext.v1.field).object = {}];

    ManuallyTriggered manually_triggered = 5 [(j5.ext.v1.field).object = {}];

    Triggered triggered = 6 [(j5.ext.v1.field).object = {}];

    Archived archived = 7 [(j5.ext.v1.field).object = {}];
  }

  // Trigger has been requested
  message Created {
    option (j5.ext.v1.message).object = {};

    string trigger_name = 1 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string app_name = 2 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string cron = 3 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    j5.messaging.v1.RequestMetadata request_metadata = 4 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).object = {}
    ];
  }

  // Trigger has been modified
  message Updated {
    option (j5.ext.v1.message).object = {};

    string trigger_name = 1 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string app_name = 2 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string cron = 3 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    j5.messaging.v1.RequestMetadata request_metadata = 4 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).object = {}
    ];
  }

  // Pause the trigger
  message Paused {
    option (j5.ext.v1.message).object = {};
  }

  // Resume the paused trigger
  message Activated {
    option (j5.ext.v1.message).object = {};
  }

  // Manually run the trigger for a specific time
  message ManuallyTriggered {
    option (j5.ext.v1.message).object = {};

    // The time the trigger is for
    google.protobuf.Timestamp trigger_time = 1 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).timestamp = {}
    ];
  }

  // The trigger has been executed for this time.
  message Triggered {
    option (j5.ext.v1.message).object = {};

    // The time the trigger is for
    google.protobuf.Timestamp trigger_time = 1 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).timestamp = {}
    ];
  }

  // Archive the trigger
  message Archived {
    option (j5.ext.v1.message).object = {};
  }
}

message TriggerEvent {
  option (j5.ext.v1.psm) = {
    entity_name: "trigger"
    entity_part: ENTITY_PART_EVENT
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  TriggerKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  TriggerEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {},
    (j5.list.v1.field).oneof.filtering.filterable = true
  ];
}

message ActionType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Create create = 1 [(j5.ext.v1.field).object = {}];

    Update update = 2 [(j5.ext.v1.field).object = {}];

    Archive archive = 3 [(j5.ext.v1.field).object = {}];
  }

  message Create {
    option (j5.ext.v1.message).object = {};

    optional string trigger_id = 1 [
      (buf.validate.field).string.pattern = "^[0-9A-Za-z]{22}$",
      (j5.ext.v1.field).key = {}
    ];

    string trigger_name = 2 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string app_name = 3 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string cron = 4 [(j5.ext.v1.field).string = {}];
  }

  message Update {
    option (j5.ext.v1.message).object = {};

    string trigger_id = 1 [
      (buf.validate.field) = {
        required: true
        string: {
          pattern: "^[0-9A-Za-z]{22}$"
        }
      },
      (j5.ext.v1.field).key = {}
    ];

    string trigger_name = 2 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string app_name = 3 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];

    string cron = 4 [(j5.ext.v1.field).string = {}];
  }

  message Archive {
    option (j5.ext.v1.message).object = {};

    string trigger_id = 1 [
      (buf.validate.field).required = true,
      (j5.ext.v1.field).string = {}
    ];
  }
}

enum TriggerStatus {
  TRIGGER_STATUS_UNSPECIFIED = 0;
  TRIGGER_STATUS_ACTIVE = 1;
  TRIGGER_STATUS_PAUSED = 2;
  TRIGGER_STATUS_ARCHIVED = 3;
}
